--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -83,6 +83,7 @@ body {
 .col-2-3  {
   display: inline-block;
   vertical-align: top;
+  padding: 10px;
 }
 .col-1-3 {
   width: 33.33%;
@@ -110,6 +111,9 @@ body {
   *zoom: 1;
 }
 
+.group .col-1-3, .group .col-2-3 {
+  float: left;
+}
 /*
   ========================================
   Rows
